tests/ui/or-patterns/binding-typo-2.stderr
error[E0408]: variable `Ban` is not bound in all patterns
  --> $DIR/binding-typo-2.rs:13:9
   |
LL |         (Foo, Bar) | (Ban, Foo) => {}
   |         ^^^^^^^^^^    --- variable not in all patterns
   |         |
   |         pattern doesn't bind `Ban`
   |
help: you might have meant to use the similarly named previously used binding `Bar`
   |
LL -         (Foo, Bar) | (Ban, Foo) => {}
LL +         (Foo, Bar) | (Bar, Foo) => {}
   |

error[E0408]: variable `Ban` is not bound in all patterns
  --> $DIR/binding-typo-2.rs:23:9
   |
LL |         (Foo, _) | (Ban, Foo) => {}
   |         ^^^^^^^^    --- variable not in all patterns
   |         |
   |         pattern doesn't bind `Ban`
   |
help: you might have meant to use the similarly named unit variant `Bar`
   |
LL -         (Foo, _) | (Ban, Foo) => {}
LL +         (Foo, _) | (Bar, Foo) => {}
   |
help: you might have meant to use the similarly named unit struct `Bay`
   |
LL -         (Foo, _) | (Ban, Foo) => {}
LL +         (Foo, _) | (::Bay, Foo) => {}
   |
help: you might have meant to use the similarly named constant `Bat`
   |
LL -         (Foo, _) | (Ban, Foo) => {}
LL +         (Foo, _) | (::Bat, Foo) => {}
   |

error[E0408]: variable `Non` is not bound in all patterns
  --> $DIR/binding-typo-2.rs:41:16
   |
LL |         (Non | None)=> {}
   |          ---   ^^^^ pattern doesn't bind `Non`
   |          |
   |          variable not in all patterns
   |
help: you might have meant to use the similarly named previously used binding `None`
   |
LL |         (None | None)=> {}
   |             +

error[E0408]: variable `Non` is not bound in all patterns
  --> $DIR/binding-typo-2.rs:51:16
   |
LL |         (Non | Some(_))=> {}
   |          ---   ^^^^^^^ pattern doesn't bind `Non`
   |          |
   |          variable not in all patterns
   |
help: you might have meant to use the similarly named unit variant `None`
   |
LL -         (Non | Some(_))=> {}
LL +         (core::option::Option::None | Some(_))=> {}
   |

error: variable `Ban` is assigned to, but never used
  --> $DIR/binding-typo-2.rs:13:23
   |
LL |         (Foo, Bar) | (Ban, Foo) => {}
   |                       ^^^
   |
   = note: consider using `_Ban` instead
note: the lint level is defined here
  --> $DIR/binding-typo-2.rs:2:9
   |
LL | #![deny(unused_variables)]
   |         ^^^^^^^^^^^^^^^^

error: variable `Ban` is assigned to, but never used
  --> $DIR/binding-typo-2.rs:23:21
   |
LL |         (Foo, _) | (Ban, Foo) => {}
   |                     ^^^
   |
   = note: consider using `_Ban` instead

error: unused variable: `Non`
  --> $DIR/binding-typo-2.rs:35:9
   |
LL |         Non => {}
   |         ^^^ help: if this is intentional, prefix it with an underscore: `_Non`

error: unused variable: `Non`
  --> $DIR/binding-typo-2.rs:41:10
   |
LL |         (Non | None)=> {}
   |          ^^^ help: if this is intentional, prefix it with an underscore: `_Non`

error: unused variable: `Non`
  --> $DIR/binding-typo-2.rs:51:10
   |
LL |         (Non | Some(_))=> {}
   |          ^^^ help: if this is intentional, prefix it with an underscore: `_Non`

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0408`.
